# docs/swagger.json
@@ -1335,12 +1335,6 @@
                         "name": "expected_revision",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Why it is being cancelled",
-                        "name": "reason",
-                        "in": "query"
                     }
                 ],
                 "responses": {
